fix text overflowing on long item name

--- a/src/app/shopping-list-display/shopping-list-display.component.css
+++ b/src/app/shopping-list-display/shopping-list-display.component.css
@@ -20,7 +20,7 @@
   display: flex;
   align-items: stretch;
   justify-content: space-between;
-  height: 2rem;
+  min-height: 2rem;
 }
 
 .list button:hover {
@@ -62,6 +62,8 @@
 
 .list .name {
   align-self: center;
+  overflow-wrap: break-word;
+  max-width: 5rem;
 }
 
 .important0 {
